<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TaskThree"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/task_three" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    android:text="@string/click_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_click_me"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>
        </TableLayout>

        <GridLayout
            android:id="@+id/grid1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/btn3"
                android:layout_width="202dp"
                android:layout_height="156dp"
                android:layout_row="0"
                android:layout_rowSpan="2"
                android:layout_column="3"
                android:layout_columnSpan="1"
                android:text="@string/click_or_long_click" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_rowSpan="3"
                android:layout_column="2"
                android:text="@string/show_name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_row="3"
                android:layout_rowSpan="1"
                android:layout_column="3"
                android:layout_columnSpan="1"
                android:hint="@string/enter_name" />
        </GridLayout>
    </LinearLayout>
</RelativeLayout>